# roboclub-lighting

./: .editorconfig  .gitignore  .gitmodules  .taplo.toml  COPYING  Cargo.toml  Cross.toml  Dockerfile  build-raspi.sh  rust-toolchain.toml  rustfmt.toml
_pkg/: rustfmt.toml
common/: Cargo.toml
common/src/: lib.rs
docker/: Dockerfile
frontend/: .gitignore  .prettierignore  index.html  package.json  pnpm-lock.yaml  tsconfig.json
frontend/public/: app.module.css  app.tsx  index.html
frontend/public/components/: color-picker.tsx  effect-settings.module.css  effect-settings.tsx  sidebar.tsx
frontend/public/state/: api.ts  state.ts
frontend/public/style/: normalize.css  style.css  variables.css
frontend/public/util/: pretty-names.ts
frontend/src/: app.module.css  app.tsx  global.d.ts  index.tsx
frontend/src/components/: color-picker.module.css  color-picker.tsx  effect-settings.tsx  sidebar.module.css  sidebar.tsx
frontend/src/state/: api.ts  state.ts
frontend/src/style/: normalize.css  style.css  variables.css
frontend/src/util/: pretty-names.ts  state-machine.ts
frontend/wled/: 404.htm  dmxmap.htm  edit.htm  index.css  index.js  iro.js  jsontest.htm  liveview.htm  liveviewws.htm  msg.htm  rangetouch.js  settings.htm  settings_dmx.htm  settings_leds.htm  settings_sec.htm  settings_sync.htm  settings_time.htm  settings_ui.htm  settings_wifi.htm  style.css  update.htm  usermod.htm  welcome.htm
raspi/: .gitignore  Cargo.toml  Cross.toml  Dockerfile  Makefile  Makefile.toml  build.rs  flake.nix  rustfmt.toml
raspi/.cargo/: config  config.toml
raspi/effect-derive/: Cargo.toml
raspi/effect-derive/src/: lib.rs
raspi/proto/: control.proto
raspi/public/: index.html  script.js
raspi/src/: audio.rs  color.rs  colour.rs  controller.rs  db.rs  effects.rs  http.rs  jsonrpc.rs  lib.rs  main.rs  pipewire.rs  runner.rs  serde_transcode.rs
raspi/src/config/: db.rs  mod.rs
raspi/src/effects/: _tmpl.rs  balls.rs  explosions.rs  flash_rainbow.rs  flash_rainbow_noise.rs  flash_rainbow_random.rs  meteors.rs  mod.rs  moving_lights.rs  police.rs  prelude.rs  rainbow.rs  random.rs  runner.rs  snake.rs  solid.rs  static_rainbow.rs
raspi/src/effects/config/: color.rs
raspi/src/effects/schema/: mod.rs
raspi/src/grpc/: mod.rs  schema.rs
raspi/src/noise/: mod.rs  perlin.rs  simplex.rs  util.rs
raspi/sysroot/usr/include/pipewire-0.3/pipewire/: version.h
raspi/sysroot/usr/lib/: libcap.so.2  libdbus-1.so.3  libpulse-simple.so.0.1.1  libpulse.so.0.20.3
raspi/sysroot/usr/lib/aarch64-linux-gnu/pkgconfig/: libpipewire-0.3.pc  libspa-0.2.pc
stm/: .gdb_history  Cargo.toml  Makefile  Makefile.toml  memory.x  openocd.cfg
stm/.cargo/: config
stm/src/: main.rs
