[package]
name = "robolab"
version = "0.1.0"
authors = ["Leah <github.leah@hrmny.sh>"]
edition = "2021"

[profile.release.package.robolab]
debug = true

[patch.crates-io]
serial-ws2812 = { path = "../_pkg/serial-ws2812" }
effect-derive = { path = "./effect-derive" }

[dependencies]
# local / vendored
effect-derive = { version = "0.0.1" }
serial-ws2812 = { version = "0.0.1", features = ["tokio"] }

# external
axum = { version = "0.7.7", features = ["ws", "macros"] }
bytemuck = { version = "1.13.1", features = ["min_const_generics"] }
color-eyre = "0.6.2"
educe = "0.6.0"
eyre = "0.6.8"
futures = "0.3"
headers = "0.4.0"
jsonrpsee = { version = "0.24.5", features = ["server", "macros"] }
palette = { version = "0.7.5", features = ["random", "serializing"] }
prost = "0.13.3"
prost-types = "0.13.3"
prost-wkt = "0.6.0"
prost-wkt-types = "0.6.0"
rand = "0.8"
serde = "1"
serde-transcode = "1.1.1"
serde_json = { version = "1", features = ["preserve_order", "float_roundtrip"] }
sled = "0.34"
tokio = { version = "1.29.1", features = ["full"] }
tokio-stream = { version = "0.1.14", features = ["sync"] }
tokio-tungstenite = "0.24.0"
tonic = "0.12.3"
tonic-types = "0.12.3"
tonic-web = "0.12.3"
tower = { version = "0.5.1", features = ["util"] }
tower-http = { version = "0.6.1", features = ["fs", "trace", "cors"] }
tracing = "0.1"
tracing-error = "0.2.0"
tracing-futures = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
utoipa = { version = "4", features = ["axum_extras", "debug"] }
validator = { version = "0.18.1", features = ["derive"] }

[build-dependencies]
prost-build = "0.13.3"
prost-wkt-build = "0.6.0"
tonic-build = "0.12.3"

#[dependencies.pipewire]
#version = "0.5.0"

#axum-extra = { version = "0.7.5", features = ["typed-routing"] }
#nb = "1.0.0"
#smart-leds = "0.3.0"
#embedded-hal = "0.2.3"

#cpal = "0.12.1"
#libpulse-binding = { version = "2.0", default-features = false , features = ["pa_v12"] }
#libpulse-simple-binding = { version = "2.0", default-features = false , features = ["pa_v12"] }


#[dependencies.libpulse-binding]
#version = "2.21"

#[dependencies.vis-core]
#version = "*"
#path = "../_pkg/visualizer2/vis-core"
#default-features = false
#features = [
#    "pulseaudio"
#]
