[package]
name = "stm"
version = "0.1.0"
authors = ["Leah <github.leah@hrmny.sh>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }

bare-metal = "0.2.5"
cortex-m = "0.6.2"
cortex-m-rt = "0.6.12"
cortex-m-semihosting = "0.3.5"
#stm32l4xx-hal = { git = "https://github.com/stm32-rs/stm32l4xx-hal", features = ["stm32l4x6", "rt"] }
stm32l4xx-hal = { path = "../_pkg/stm32l4xx-hal", features = ["stm32l4x6", "rt"] }
#stm32f1xx-hal = { version = "*" , features = ["stm32f107", "rt"] }
#stm32f4xx-hal = "0.8.3"
panic-semihosting = "0.5.3"
embedded-hal = "0.2.3"
serde = { version = "1.0", default-features = false }
heapless = "0.5.6"
postcard = "0.5.1"
nb = "1.0.0"
replace_with = { version = "0.1.7", default-features = false }
